# LinuxEmbeddedWithBBB

./: .gitmodules  CLAUDE.md  HUONG_DAN_SU_DUNG.md  README.md  test_cm_per  test_cm_per.c
.claude/agents/: bbb.agent.md
.github/: copilot-instructions.md
.github/instructions/: careful-reasoning.instructions.md  code-quality.instructions.md  error-handling.instructions.md
BBB_docs/: tableQuanTrong.md
bbb_simulator/: CMakeLists.txt  README.md  SESSION_CONTEXT.md
bbb_simulator/include/: am335x_map.h  bbb_sim.h  cpu_emu.h  elf_loader.h  gui.h  ko_loader.h  mem_subsys.h  syscall_emu.h
bbb_simulator/include/periph/: adc.h  control.h  gpio.h  i2c.h  intc.h  prcm.h  spi.h  timer.h  uart.h
bbb_simulator/src/: bbb_sim.c  cpu_emu.c  elf_loader.c  ko_loader.c  main.c  mem_subsys.c  syscall_emu.c
bbb_simulator/src/gui/: gui_gpio.c  gui_main.c  gui_memory.c  gui_registers.c  gui_uart.c
bbb_simulator/src/periph/: adc.c  control.c  gpio.c  i2c.c  intc.c  prcm.c  spi.c  timer.c  uart.c
lessons/: bai_01_tong_quan_am335x_soc.md  bai_02_beaglebone_black_hardware_overview.md  bai_03_linux_co_ban_cho_embedded.md
lessons/bai_03_linux_boot_process/: bai_03_linux_boot_process.md
lessons/bai_03_linux_co_ban_cho_embedded/: README.md  bai_03_linux_co_ban_cho_embedded.md
lessons/bai_03_moi_truong_phat_trien/: README.md  bai_03_moi_truong_phat_trien.md
lessons/bai_04_device_tree_co_ban/: bai_04_device_tree_co_ban.md
lessons/bai_05_gpio/: README.md  bai_05_gpio.md
notes/: session_log.md
scripts/: Makefile.template  build&loadToBBB.sh
tai_lieu_phuluuan/: README.md
(+211 files in other folders)
